# JNISample

./: .gitignore  CMakeLists.txt  README.md  com_example_Main.cpp  com_example_Main.h  standalone_jvm.cpp  standalone_jvm_multiple_thread.cpp
java/com/example/: Main.java  User.java
